--- a/examples/jumbotron/portfolio.html
+++ b/examples/jumbotron/portfolio.html
@@ -38,6 +38,7 @@
 	  <li>Pet Store</li>
 	  <li>Sth Very Awesome</li>
 	  <li>Unusable Git Client</li>
+	  <li>VIM Tutorial</li>
 	</ul>
   </body>
 </html>
